My work is compelted

--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,14 @@
     <hr>
     <h1><A><center>Registration Form</center></A></h1>
     <form>
-       <center>Name <input>  CNIC <input><br>
+       <center> Name <input>  CNIC <input><br>
      </center> 
       <center>Course<input> Session<input><br></center>
       <center>Email<input> Password<input><br></center> 
       <center>Address<input><br></center>
       <center>Gender <input type="radio" name="g"> Male <input type="radio" name="g"> Female <br></center>
      <center><select>
-        <option>""""select""""</option>
+        <option>""""""select""""""</option>
         <option>1<option>
         <option>2</option>
         <option>3</option> 
