--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,15 @@
     <hr>
     <h1><A><center>Registration Form</center></A></h1>
     <form>
-       <center> Name <input>  CNIC <input><br>
-     </center> 
-      <center>Course<input> Session<input><br></center>
-      <center>Email<input> Password<input><br></center> 
-      <center>Address<input><br></center>
+       <body bgcolor="skyblue">
+       <center><h3> Name <input>  CNIC <input><br></h3></center> 
+      <center><h3>Course<input> Session<input><br></h3></center>
+      <center><h3>Email<input> Password<input><br></h3></center> 
+      <center><h3>Address<textarea name="massage" rows="3" cols="15"></textarea><br></h3></center>
       <center>Gender <input type="radio" name="g"> Male <input type="radio" name="g"> Female <br></center>
-     <center><select>
-        <option>"""select"""</option>
+     <center><label for="city">City</label></center>
+      <center><select>
+       <option>"""select"""</option>
         <option>1<option>
         <option>2</option>
         <option>3</option> 
